# image-processor

./: CMakeLists.txt  README.md  image_processor.cpp
headers/: argument_parser.h  controller.h  exceptions.h  image_base.h  image_bmp.h
headers/filters/: base_filters.h  crop.h  edge_detection.h  gaussian_blur.h  grayscale.h  median_blur.h  negative.h  sharpening.h
src/: argument_parser.cpp  controller.cpp  image_base.cpp  image_bmp.cpp
src/filters/: base_filters.cpp  crop.cpp  edge_detection.cpp  gaussian_blur.cpp  grayscale.cpp  median_blur.cpp  negative.cpp  sharpening.cpp
